--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -8,4 +8,5 @@
     <item name="return_scan_result" type="id" />
     <item name="detail_behavior_content_padding_done" type="id" />
     <item name="recycle_tag" type="id" />
+    <item name="original_width" type="id"/>
 </resources>
