--- a/app/src/main/res/layout/activity_video_trim.xml
+++ b/app/src/main/res/layout/activity_video_trim.xml
@@ -1,15 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/black"
         android:orientation="vertical">
 
-        <com.iknow.android.widget.VideoTrimmerView
-            android:id="@+id/trimmer_view"
+        <com.iknow.android.widget.ZVideoView
+            android:id="@+id/videoViewDummy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/llButtons"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="10dp"
+            android:visibility="visible"/>
+
+        <com.iknow.android.widget.ZVideoView
+            android:id="@+id/videoView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/llButtons"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="10dp" />
+
+        <LinearLayout
+            android:id="@+id/llButtonsDummy"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+            android:layout_height="50dp"
+            android:layout_above="@id/recViewVideos"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal"
+            android:visibility="visible">
+
+            <ImageView
+                android:id="@+id/imgViewCancelDummy"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_close"
+                android:clickable="false"
+                tools:ignore="ContentDescription"
+                android:visibility="invisible"/>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/imgViewPlayDummy"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:clickable="false"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_play"
+                tools:ignore="ContentDescription"
+                android:visibility="invisible"/>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/imgViewDoneDummy"
+                android:layout_width="30dp"
+                android:clickable="false"
+                android:layout_height="match_parent"
+                android:padding="8dp"
+                android:src="@drawable/ic_done"
+                tools:ignore="ContentDescription"
+                android:visibility="invisible"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llButtons"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_above="@id/recViewVideos"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal"
+            android:visibility="visible">
+
+            <ImageView
+                android:id="@+id/imgViewCancel"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_close"
+                tools:ignore="ContentDescription" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/imgViewPlay"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_play"
+                tools:ignore="ContentDescription" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/imgViewDone"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:padding="8dp"
+                android:src="@drawable/ic_done"
+                tools:ignore="ContentDescription" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recViewVideos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true" />
+
+        <include android:id="@+id/loadingWithMask" layout="@layout/loading_with_mask"/>
+
+    </RelativeLayout>
+
 </layout>
