--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="white">#ffffffff</color>
+    <color name="transparent">#00FFFFFF</color>
+    <color name="orange">#FF9800</color>
     <color name="red">#aacc0000</color>
     <color name="background_video_color">#2f3031</color>
     <color name="background_progress_color">#6C6D6D</color>
@@ -14,4 +16,5 @@
     <color name="line_button">#565758</color>
     <color name="black_translucent">#50000000</color>
     <color name="top_bottom">#42BAF8</color>
+    <color name="black">#000000</color>
 </resources>
